[package]
name = "kicker_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.7.0"
dotenv = "0.15.0"
tokio = { version =  "1.3.0", features = ["rt-multi-thread", "macros"] }
pretty_env_logger = "0.4.0"
log = "0.4.8"
reqwest = "0.11.9"
serde = { version = "1.0", default-features = false, features = ["derive"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
